Update Iris flower classification .ipynb

--- a/Iris flower classification .ipynb
+++ b/Iris flower classification .ipynb
@@ -5,7 +5,7 @@
    "id": "d2a25ac7-dcc4-41a5-8a55-c5a3d09662cb",
    "metadata": {},
    "source": [
-    "OASIS INFOBYTE"
+    "CODSOFT"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "c6762501-269f-450c-8f57-40b47c1a53c4",
    "metadata": {},
    "source": [
-    "April Phase 1 AICTE OIB-SIP 2024."
+    "TASK - 3"
    ]
   },
   {
